<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Briscola</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Briscola</string>
    <string name="playerWonText">Wins: %d</string>
    <string name="aiWonText">Wins: %d</string>
    <string name="playerScoreText">Score: %d</string>
    <string name="aiScoreText">Score: %d</string>
    <string name="deckCountText">Cards: %d</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="think_time_name">Think time</string>
    <string name="default_think_time_value">10</string>
    <string name="score_view_title">Scores visible</string>
    <string name="resume_message">Would you resume game?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="music_title">Music</string>
    <string name="playerCard1_desc">Left player card</string>
    <string name="playerCard2_desc">Center player card</string>
    <string name="playerCard3_desc">Right player card</string>
    <string name="aiCard1_desc">Left opposite card</string>
    <string name="aiCard2_desc">Center opposite card</string>
    <string name="aiCard3_desc">Right opposite card</string>
    <string name="trumpCard_desc">Trump card</string>
    <string name="deck_desc">Deck</string>
    <string name="playerCard_desc">Player played card</string>
    <string name="aiCard_desc">Opposite played card</string>
    <string name="aiWin_message">I\'ll win</string>
    <string name="playerWin_message">You could win</string>
</resources>
