<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/desk"
    android:contentDescription="@string/playerCard1_desc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BriscolaActivity" >

    <ImageView
        android:id="@+id/aiCard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/aiCard1"
        android:contentDescription="@string/aiCard2_desc"
        android:src="@drawable/ic_empty" />

    <ImageView
        android:id="@+id/aiCard3"
        android:contentDescription="@string/aiCard3_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/aiCard2"
        android:src="@drawable/ic_empty" />

    <ImageView
        android:id="@+id/trumpCard"
        android:contentDescription="@string/trumpCard_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:src="@drawable/ic_empty" />

    <ImageView
        android:id="@+id/deck"
        android:contentDescription="@string/deck_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/trumpCard"
        android:src="@drawable/ic_deck" />

    <ImageView
        android:id="@+id/playerCard"
        android:contentDescription="@string/playerCard_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_empty" />

    <ImageView
        android:id="@+id/aiCard"
        android:layout_width="wrap_content"
        android:contentDescription="@string/aiCard_desc"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/playerCard"
        android:src="@drawable/ic_empty" />

    <ImageView
        android:id="@+id/playerCard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/playerCard1_desc"
        android:src="@drawable/ic_empty" />

    <ImageView
        android:id="@+id/playerCard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/playerCard1"
        android:contentDescription="@string/playerCard2_desc"
        android:src="@drawable/ic_empty" />

    <ImageView
        android:id="@+id/playerCard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/playerCard2"
        android:contentDescription="@string/playerCard3_desc"
        android:src="@drawable/ic_empty" />

    <TextView
        android:id="@+id/aiWonGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/aiWonText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/aiCard1"
        android:contentDescription="@string/aiCard1_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_empty" />

    <TextView
        android:id="@+id/aiScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/aiWonGame"
        android:text="@string/aiScoreText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/playerWonGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/playerCard3"
        android:text="@string/playerWonText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/playerWonGame"
        android:text="@string/playerScoreText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/deckCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deck"
        android:layout_alignLeft="@id/deck"
        android:text="@string/deckCountText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible" />

</RelativeLayout>